- login logs chagne to name - logout logs change to name - edit profile logs change to name - view student logs change to name - validation z-index - llogin validation fixed - logs fetch cahnge uid to name

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body{
 
 
 .active-side-menu{
-    @apply absolute top-0 left-0 z-[999] bg-white pt-5 pb-4 pl-3 pr-3 overflow-visible transition-all duration-500 ease-in-out 
+    @apply absolute top-0 left-0 z-[500] bg-white pt-5 pb-4 pl-3 pr-3 overflow-visible transition-all duration-500 ease-in-out 
     w-[calc(100svw-24px)] h-[calc(100svh-24px)] m-3 rounded-xl lg:w-[250px] lg:min-w-[250px] lg:h-full lg:flex lg:flex-col lg:static lg:m-0;
 
     overflow-y: auto;
